# verbose-macros

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example.rs
src/: lib.rs
